--- a/src/Mod/Material/App/CMakeLists.txt
+++ b/src/Mod/Material/App/CMakeLists.txt
@@ -88,6 +88,8 @@ SET(Materials_SRCS
     FolderTree.h
     Library.cpp
     Library.h
+    LibraryManager.cpp
+    LibraryManager.h
     MaterialConfigLoader.cpp
     MaterialConfigLoader.h
     MaterialFilter.cpp
@@ -121,6 +123,8 @@ SET(Materials_SRCS
     PropertyMaterial.h
     PyVariants.cpp
     PyVariants.h
+    SharedLibrary.cpp
+    SharedLibrary.h
     trim.h
 )
 
